# stream-aggregator

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  Dockerfile  PRODUCT.md  QUICKSTART-DOCKER.md  QUICKSTART.md  README.md  STATUS.md  config.example.toml  config.production.example.toml  diesel.toml  docker-compose.yml
.github/workflows/: README.md  ci.yml  cleanup-caches.yml  docker-publish.yml  merge-queue.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
crates/providers/stream-aggregator-provider-angelthump/: Cargo.toml
crates/providers/stream-aggregator-provider-angelthump/src/: client.rs  lib.rs  models.rs
crates/providers/stream-aggregator-provider-dlive/: Cargo.toml
crates/providers/stream-aggregator-provider-dlive/src/: client.rs  lib.rs  models.rs
crates/providers/stream-aggregator-provider-guac/: Cargo.toml
crates/providers/stream-aggregator-provider-guac/src/: client.rs  lib.rs  models.rs
crates/providers/stream-aggregator-provider-kick/: Cargo.toml
crates/providers/stream-aggregator-provider-kick/examples/: test_discovery.rs  test_discovery_full.rs
crates/providers/stream-aggregator-provider-kick/src/: client.rs  lib.rs  models.rs
crates/providers/stream-aggregator-provider-robotstreamer/: Cargo.toml
crates/providers/stream-aggregator-provider-robotstreamer/src/: client.rs  lib.rs  models.rs
crates/providers/stream-aggregator-provider-tiktok/: Cargo.toml  README.md
crates/providers/stream-aggregator-provider-tiktok/nodejs-bridge/: README.md  index.js  package-lock.json  package.json
crates/providers/stream-aggregator-provider-tiktok/src/: client.rs  lib.rs  models.rs
crates/providers/stream-aggregator-provider-trovo/: Cargo.toml
crates/providers/stream-aggregator-provider-trovo/src/: client.rs  lib.rs  models.rs
crates/providers/stream-aggregator-provider-twitch/: Cargo.toml
crates/providers/stream-aggregator-provider-twitch/src/: auth.rs  client.rs  lib.rs  models.rs  tests.rs
crates/providers/stream-aggregator-provider-youtube/: Cargo.toml
crates/providers/stream-aggregator-provider-youtube/src/: lib.rs  models.rs  scraper.rs
crates/stream-aggregator/: Cargo.toml
crates/stream-aggregator-api/: Cargo.toml  README.md
crates/stream-aggregator-api/examples/: auth_example.rs
crates/stream-aggregator-api/src/: handlers.rs  lib.rs  middleware.rs  responses.rs  router.rs
crates/stream-aggregator-api/tests/: communities.rs
crates/stream-aggregator-core/: Cargo.toml
crates/stream-aggregator-core/src/: errors.rs  id.rs  lib.rs  models.rs  traits.rs
crates/stream-aggregator-migrator/: Cargo.toml
crates/stream-aggregator-migrator/src/: main.rs
crates/stream-aggregator-scheduler/: Cargo.toml
crates/stream-aggregator-scheduler/src/: lib.rs  scheduler.rs
crates/stream-aggregator-store/: Cargo.toml
crates/stream-aggregator-store/migrations/2025122522090200_create_streams/: down.sql  up.sql
crates/stream-aggregator-store/migrations/2025122522091500_create_tracked_streamers/: down.sql  up.sql
crates/stream-aggregator-store/migrations/2026051712000000_rename_last_updated_add_last_live/: down.sql  up.sql
crates/stream-aggregator-store/migrations/2026051713000000_create_communities/: down.sql  up.sql
crates/stream-aggregator-store/migrations/2026051713000100_create_community_domains/: down.sql  up.sql
crates/stream-aggregator-store/migrations/2026051713010000_add_login_to_streams/: down.sql  up.sql
crates/stream-aggregator-store/migrations/sqlite/: 001_initial.sql
crates/stream-aggregator-store/src/: diesel_store.rs  lib.rs  memory.rs  models.rs  schema.rs  sqlite.rs
crates/stream-aggregator/src/: config.rs  lib.rs  main.rs  providers.rs  stores.rs
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  CRATES.md  DEPLOYMENT.md  DOCKER-IMAGES.md  MIGRATION.md  PLATFORMS.md  PROMPT.md
examples/: sqlite_example.rs
web/: README.md  middleware.ts  package.json  proxy.ts
web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/app/_not-configured/: page.tsx
web/app/admin/: layout.tsx  page.tsx
web/app/admin/communities/: actions.ts  page.tsx
web/app/admin/communities/[slug]/: page.tsx
web/app/admin/communities/new/: page.tsx
web/app/admin/streamers/: actions.ts  page.tsx
web/app/api/admin-login/: route.ts
web/app/c/[slug]/: layout.tsx  page.tsx
web/app/c/[slug]/about/: page.tsx
web/app/c/[slug]/all/: page.tsx
web/components/: community-header.tsx  filter-bar.tsx  live-pill.tsx  platform-pill.tsx  stream-card.tsx  stream-grid.tsx  theme-toggle.tsx
web/components/admin/: add-streamer-form.tsx  community-editor.tsx  login-form.tsx  sidebar.tsx  streamer-table.tsx
web/lib/: api-types.ts  api.ts  auth.ts  color.ts  communities.ts  community-search-params.ts  format.ts
