[package]
name = "stream-aggregator-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
stream-aggregator-core = { path = "../stream-aggregator-core" }
stream-aggregator-store = { path = "../stream-aggregator-store" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_qs = "0.13"
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
