[package]
name = "stream-aggregator-migrator"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = [
	"runtime-tokio-rustls",
	"sqlite",
	"chrono",
] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
wreq = { workspace = true }

# Local dependencies
stream-aggregator-core = { path = "../stream-aggregator-core" }
stream-aggregator-store = { path = "../stream-aggregator-store" }
