[package]
name = "stream-aggregator-scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
stream-aggregator-core = { path = "../stream-aggregator-core" }
stream-aggregator-store = { path = "../stream-aggregator-store" }
tokio = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
