[package]
name = "stream-aggregator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "stream-aggregator"
path = "src/main.rs"

[features]
default = [
	"provider-twitch",
	"provider-youtube",
	"provider-kick",
	"provider-dlive",
	"provider-trovo",
	"provider-guac",
	"provider-angelthump",
	"provider-robotstreamer",
	"provider-tiktok",
	"diesel-sqlite",
]
provider-twitch = ["stream-aggregator-provider-twitch"]
provider-youtube = ["stream-aggregator-provider-youtube"]
provider-kick = ["stream-aggregator-provider-kick"]
provider-dlive = ["stream-aggregator-provider-dlive"]
provider-trovo = ["stream-aggregator-provider-trovo"]
provider-guac = ["stream-aggregator-provider-guac"]
provider-angelthump = ["stream-aggregator-provider-angelthump"]
provider-robotstreamer = ["stream-aggregator-provider-robotstreamer"]
provider-tiktok = ["stream-aggregator-provider-tiktok"]
memory-store = ["stream-aggregator-store/memory"]
diesel-store = ["stream-aggregator-store/diesel"]
diesel-sqlite = ["diesel-store", "stream-aggregator-store/diesel-sqlite"]
diesel-postgres = ["diesel-store", "stream-aggregator-store/diesel-postgres"]
all-stores = ["memory-store", "diesel-sqlite", "diesel-postgres"]

[dependencies]
# Internal crates
stream-aggregator-core = { path = "../stream-aggregator-core" }
stream-aggregator-api = { path = "../stream-aggregator-api" }
stream-aggregator-store = { path = "../stream-aggregator-store" }
stream-aggregator-scheduler = { path = "../stream-aggregator-scheduler" }

# Optional providers
stream-aggregator-provider-twitch = { path = "../providers/stream-aggregator-provider-twitch", optional = true }
stream-aggregator-provider-youtube = { path = "../providers/stream-aggregator-provider-youtube", optional = true }
stream-aggregator-provider-kick = { path = "../providers/stream-aggregator-provider-kick", optional = true }
stream-aggregator-provider-dlive = { path = "../providers/stream-aggregator-provider-dlive", optional = true }
stream-aggregator-provider-trovo = { path = "../providers/stream-aggregator-provider-trovo", optional = true }
stream-aggregator-provider-guac = { path = "../providers/stream-aggregator-provider-guac", optional = true }
stream-aggregator-provider-angelthump = { path = "../providers/stream-aggregator-provider-angelthump", optional = true }
stream-aggregator-provider-robotstreamer = { path = "../providers/stream-aggregator-provider-robotstreamer", optional = true }
stream-aggregator-provider-tiktok = { path = "../providers/stream-aggregator-provider-tiktok", optional = true }

# Runtime & config
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI
clap = { version = "4.4", features = ["derive", "env"] }
