[package]
name = "stream-aggregator-provider-robotstreamer"
version = "0.1.0"
edition = "2021"

[dependencies]
stream-aggregator-core = { path = "../../stream-aggregator-core" }
async-trait = "0.1"
wreq = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
chrono = "0.4"
